# corpus

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
project-name/: pyproject.toml
src/corpus/: __init__.py
tests/: test_corpus.py
